--- a/main.html
+++ b/main.html
@@ -12,6 +12,9 @@
 	<li>2</li>
 	<li>3</li>
 </ul>
+<form>
+	<input type="submit" value="Кнопка">
+</form>
 <style type="text/css">
 	#qwerty{
 		background: #ED9BF4;
