--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
 	<li>3</li>
 </ul>
 <form>
+	<input type="text" name="" value="Имя пользователя">
 	<input type="submit" value="Кнопка">
 </form>
 <style type="text/css">
