--- a/main.html
+++ b/main.html
@@ -7,13 +7,13 @@
 <h1>Заголовок</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium quos labore necessitatibus aut beatae, maxime corporis voluptatem, consequuntur exercitationem rem at incidunt soluta vero ducimus consequatur dolor quis voluptates reiciendis.</p>
 <p id="qwerty">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, atque vero quos totam magnam earum, natus nisi vel tempore modi ipsam suscipit? Quos molestiae amet qui nisi esse reprehenderit, doloribus?</p>
-<ul>
-	<li>1</li>
-	<li>2</li>
-	<li>3</li>
-</ul>
-<form>
+
+<form method="post">
 	<input type="text" name="" value="Имя пользователя">
+	<br>
+	<label for="qwe">Введите имя:</label>
+	<input type="text" id="qwe" name="qwe">
+	<br>
 	<input type="submit" value="Кнопка">
 </form>
 <style type="text/css">
