--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
 	<title>Example</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-	<h2>Форма регистрации:</h2>
-<form method="post" action="index.php">
-	<label for="name">Имя</label>
-	<input type="text" id="name" name="name" placeholder="Введите ваше имя">
-	<br>
-	<label for="last_name">Фамилия</label>
-	<input type="text" id="last_name" name="last_name" placeholder="Введите вашу фамилию">
-	<br>
-	<label for="login">Логин</label>
-	<input type="text" id="login" name="login">
-	<br>
-	<label for="email">Электронная почта</label>
-	<input type="email" id="email" name="email">
-	<br>
-	<label for="password">Пароль</label>
-	<input type="password" id="password" name="password">
-	<br>
-	<input type="submit" value="Отправить">
-</form>
+	<div class="container p-3 mb-2 bg-secondary text-white">
+		<h2>Форма регистрации:</h2>
+		<form method="post" action="index.php">
+			<label for="name">Имя</label>
+			<input type="text" class="form-control" id="name" name="name" placeholder="Введите ваше имя">
+			<br>
+			<label for="last_name">Фамилия</label>
+			<input type="text" class="form-control" id="last_name" name="last_name" placeholder="Введите вашу фамилию">
+			<br>
+			<label for="login">Логин</label>
+			<input type="text" class="form-control" id="login" name="login">
+			<br>
+			<label for="email">Электронная почта</label>
+			<input type="email" id="email" aria-describedby="emailHelp" class="form-control" name="email">
+			<br>
+			<label for="password">Пароль</label>
+			<input type="password" class="form-control" id="password" name="password">
+			<br>
+			<input type="submit" value="Отправить" class="btn btn-primary">
+		</form>
+	</div>
 </body>
 </html>
